--- a/templates/apps/base.html
+++ b/templates/apps/base.html
@@ -87,7 +87,7 @@
       </ul>
     </div>
   </nav>
-  {% if user.is_authenticated %}
+  {% if user.is_staff %}
   <aside class="sidebar left">
       <a href="javascript:void(0)" class='btn_sidebar' data-action="toggle" data-side="left">
           <img src="{% static 'img/Untitled1.png' %}" alt="">
