--- a/templates/register/base.html
+++ b/templates/register/base.html
@@ -33,7 +33,7 @@
            <a class="nav-item nav-link" href="{% url 'register:user_detail' user.pk %}">マイページ</a>
          </li>
          <li>
-           <a class="nav-item nav-link" href="{% url 'register:user_detail' user.pk %}">メッセージBox</a>
+           <a class="nav-item nav-link" href="#">メッセージBox</a>
          </li>
          <li>
            <a class="nav-item nav-link" href="{%url 'register:logout' %}">ログアウト</a>
