--- a/mysite/chat/templates/chat/base.html
+++ b/mysite/chat/templates/chat/base.html
@@ -70,7 +70,7 @@
             <a class="nav-item nav-link" href="{% url 'register:user_detail' user.pk %}">マイページ</a>
           </li>
           <li>
-            <a class="nav-item nav-link" href="{% url 'register:user_detail' user.pk %}">メッセージBox</a>
+            <a class="nav-item nav-link" href="#">メッセージBox</a>
           </li>
           <li>
             <a class="nav-item nav-link" href="{%url 'register:logout' %}">ログアウト</a>
@@ -131,11 +131,11 @@
 
 <script>
         
-        var user = {{user_id}};
-        var aritcle = {{aritcle_id}};
-
+        var user_id = {{user_id}};
+        var article_id = {{aritcle_id}};
+       
         var chatSocket = new WebSocket(
-            'ws://127.0.0.1:8000/ws/chat/' + user + '/' + aritcle + '/' );
+            'ws://127.0.0.1:8000/ws/chat/' + user_id + '/' + article_id + '/' );
     
         chatSocket.onmessage = function(e) {
             var data = JSON.parse(e.data);
@@ -143,14 +143,28 @@
             var div = document.getElementById('chat_test');
             var doc = document.getElementById("chat-log");
             var ontime = document.getElementById("ontime");
-            var remove = document.getElementsByClassName("chat_msg right now")
-            
-            document.querySelector('#chat-log').value += (message + '\n')
-            doc.removeAttribute("id")
-            remove[0].classList.remove("now")
-            ontime.parentNode.insertAdjacentHTML('beforeend', "<li id='ontime' class='chat_msg right now'><textarea readonly id='chat-log' class='chat-log-right'></textarea></li>")
-            div.classList.add("active")
-            
+            var remove = document.getElementsByClassName("chat_msg right now");
+            var msg_id = document.getElementById("msg");
+            var display_none_right = document.getElementsByClassName("msg-sub");
+            var msg_class = document.getElementsByClassName("msg-right-sub");
+            if (msg_id != null) {
+
+              document.querySelector('#chat-log').value += (message + '\n')
+              doc.removeAttribute("id")
+              remove[0].classList.remove("now")
+              display_none_right[0].parentNode.insertAdjacentHTML('beforebegin', 
+                                     "<div id='msg' class='msg-right'><ul id='chat_test'><li id='ontime' class='chat_msg right now'><textarea readonly id='chat-log' class='chat-log-right'></textarea></li></ul></div>"
+              )
+              div.classList.add("active")
+            }else {
+              // document.querySelector('#chat-log').value += (message + '\n')
+              // msg_class[0].classList.remove("msg-right-sub")
+              // msg_id.classList.add("msg-right")
+              // doc.removeAttribute("id")
+              // remove[0].classList.remove("now")
+              // ontime.parentNode.insertAdjacentHTML('beforeend', "<div id='msg' class='msg-right's><ul id='chat_test'><li id='ontime' class='chat_msg right now'><textarea readonly id='chat-log' class='chat-log-right'></textarea></li></ul></div>")
+              // div.classList.add("active")
+            }
             // var insert = document.getElementByClassName('chat_msg right');
             // insert.insertAdjacentHTML("beforebegin", doc);
         };
