--- a/templates/register/user_form.html
+++ b/templates/register/user_form.html
@@ -44,7 +44,7 @@
       {% csrf_token %}
       <div class='button'>
         <input type="submit" id='submit' value="編集完了" disabled/>
-        <button class='back' type="button"><a href="{% url 'register:user_detail' user.pk %}">戻る</a></button>
+        <button class='back' type="button"><a href="{% url 'register:user_detail' user.pk user.username %}">戻る</a></button>
       </div>
       <div class='point'>
         <p class='point_title'>【プロフィール画像について】</p>
